@@ -1,3 +1,11 @@
+2007-07-09  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-metadata.[ch]:
+	* libjuicer/sj-metadata-cdtext.c:
+	* libjuicer/sj-metadata-musicbrainz.c:
+	* src/sj-main.c:
+	Remove the useless construct-error code.
+
 2007-07-05  Ross Burton  <ross@burtonini.com>
 
 	* libjuicer/sj-extractor.c:
